[gd_scene load_steps=14 format=3 uid="uid://bvjxy18tre1u2"]

[ext_resource type="Script" path="res://code/objects/main_menu_frog.gd" id="1_2md6a"]
[ext_resource type="Texture2D" uid="uid://o05xy5cbgu7" path="res://assets/sprites/frog.png" id="1_3bxop"]
[ext_resource type="Texture2D" uid="uid://eucb0auhlgsy" path="res://assets/sprites/frog_2.png" id="3_yusqr"]
[ext_resource type="AudioStream" uid="uid://cxlna1thivgdj" path="res://assets/sfx/sfx_land.wav" id="4_tec0d"]
[ext_resource type="AudioStream" uid="uid://cw37tpceans63" path="res://assets/sfx/splash 7.wav" id="5_fjwcg"]
[ext_resource type="AudioStream" uid="uid://bj825ntcbq3tb" path="res://assets/sfx/splash 11.wav" id="6_ss4u6"]
[ext_resource type="AudioStream" uid="uid://dfpd55jrwp8t2" path="res://assets/sfx/splash 16.wav" id="7_8x7uw"]
[ext_resource type="AudioStream" uid="uid://dtc3xf78nutvt" path="res://assets/sfx/sfx_die.wav" id="8_j21nl"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_s13he"]
radius = 6.0
height = 24.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_cvc2e"]
height = 20.0

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_25ntq"]
random_pitch = 1.1
random_volume_offset_db = 5.0
streams_count = 1
stream_0/stream = ExtResource("4_tec0d")

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_hdeye"]
random_pitch = 1.1
random_volume_offset_db = 5.0
streams_count = 3
stream_0/stream = ExtResource("5_fjwcg")
stream_1/stream = ExtResource("6_ss4u6")
stream_2/stream = ExtResource("7_8x7uw")

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_q6rar"]
random_pitch = 1.1
random_volume_offset_db = 5.0
streams_count = 1
stream_0/stream = ExtResource("8_j21nl")

[node name="MainMenuFrog" type="RigidBody2D"]
position = Vector2(-148, -29)
collision_layer = 32768
collision_mask = 32769
can_sleep = false
contact_monitor = true
max_contacts_reported = 1
script = ExtResource("1_2md6a")
textures = Array[Texture]([ExtResource("1_3bxop"), ExtResource("3_yusqr")])

[node name="Sprite" type="Sprite2D" parent="."]
texture_filter = 1
texture = ExtResource("1_3bxop")
hframes = 3
vframes = 2
frame = 1
metadata/_aseprite_wizard_config_ = {
"i_mode": -1,
"keep_anim_length": false,
"layer": "",
"o_ex_p": "",
"o_folder": "res://assets/sprites",
"o_name": "",
"only_visible": false,
"player": "AnimationPlayer",
"slice": "",
"source": "res://assets/sprites/frog.ase"
}
metadata/_aseprite_wizard_interface_config_ = {
"animation_section": true,
"layer_section": true,
"output_section": true,
"slice_section": true
}
metadata/_aseprite_wizard_source_file_hash_ = "8e46e9ccb010491716817538fd3423f1"

[node name="Collider" type="CollisionShape2D" parent="."]
position = Vector2(0, 2)
rotation = 1.5708
shape = SubResource("CapsuleShape2D_s13he")

[node name="DeathBoxDetector" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 4

[node name="Area" type="CollisionShape2D" parent="DeathBoxDetector"]
position = Vector2(0, 2)
shape = SubResource("CapsuleShape2D_cvc2e")

[node name="SFXLand" type="AudioStreamPlayer" parent="."]
stream = SubResource("AudioStreamRandomizer_25ntq")
volume_db = -10.0

[node name="SFXSplash" type="AudioStreamPlayer" parent="."]
stream = SubResource("AudioStreamRandomizer_hdeye")
volume_db = -5.0

[node name="SFXDie" type="AudioStreamPlayer" parent="."]
stream = SubResource("AudioStreamRandomizer_q6rar")
volume_db = -10.0

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="area_entered" from="DeathBoxDetector" to="." method="_on_death_box_detector_area_entered"]
[connection signal="body_entered" from="DeathBoxDetector" to="." method="_on_death_box_detector_body_entered"]
